file, script updated

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <div class="container">
         <div class="wrapper">
             <div class="heading">
-                <h3>To-do App</h3>
-                <p>What do you want to do today?</p>
+                <h3 style='color:white'>To-do App</h3>
+                <p style='color:gray'>What do you want to do today?</p>
             </div>
 
             <div class="todos_list">
