time added to the todos app

--- a/index.html
+++ b/index.html
@@ -21,7 +21,12 @@
             </div>
 
             <div class="form_container">
+                <label for="todo_text" style="font-size: 13px;">Todos content</label><br>
                 <input type="text" id="todo_text" placeholder="Enter Todos List"><br>
+
+                <label for="time" style="font-size: 13px;">Time(11am -2pm)</label><br>
+                <input type="text" id="time" placeholder="12am -2pm"><br>
+
                 <input type="submit" id="submit" value="Add to list">
             </div>
         </div>
